src/test/deca/context/invalid/LE/invalidParametre.deca
// Historique:
//    cree le 19/01/2022

class A {
    int x;

    int ajoute(invalid x){
        return x+1;
    }
}
